# xero-blade-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  sidereal-plugin.yaml  stallari-plugin.yaml
.github/workflows/: publish.yml
src/xero_blade_mcp/: __init__.py  __main__.py  auth.py  client.py  formatters.py  models.py  server.py
tests/: conftest.py  test_auth.py  test_client.py  test_formatters.py  test_models.py  test_server.py
